--- a/seabios.spec.in
+++ b/seabios.spec.in
@@ -9,9 +9,9 @@ Epoch:          1000
 Summary:        Open-source legacy BIOS implementation
 
 License:        LGPLv3
-URL:            http://www.coreboot.org/SeaBIOS
+URL:            https://www.seabios.org
 
-Source0:        http://code.coreboot.org/p/seabios/downloads/get/%{name}-%{version}.tar.gz
+Source0:        https://www.seabios.org/downloads/%{name}-%{version}.tar.gz
 
 Patch0001:      0001-Workaround-for-a-win8.1-32-S4-resume-bug.patch
 Patch0002:      0002-reserve-more-memory-on-fseg.patch
